--- a/src/app/eventos/nuevo-evento.component.html
+++ b/src/app/eventos/nuevo-evento.component.html
@@ -43,6 +43,7 @@
                     <div class="tab-content tab-space">
                         <!-- ANIVERSARIO -->
                         <div class="tab-pane active" id="aform">
+                        <!--<form >-->
                             <div class="row">
                                 <div class="col-6 mx-auto form-group">
                                     <label for="nombre">Título del aniversario</label>
@@ -61,8 +62,15 @@
 
                             <div class="row">
                                 <div class="col-6 mx-auto form-group">
+                                    <!-- <angular2-date-picker [(ngModel)]="nuevaFecha" [settings]="settingFecha"></angular2-date-picker> -->
+                                    <ngb-datepicker #d></ngb-datepicker>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-6 mx-auto form-group">
                                     <label for="lugar">Lugar del aniversario</label>
-                                    <input type="text" class="form-control" name="lugar" id="lugar" aria-describedby="helpId" placeholder="01/02/2019" [(ngModel)]="evento.direccion" />
+                                    <input type="text" class="form-control" name="lugar" id="lugar" aria-describedby="helpId" placeholder="Dirección" [(ngModel)]="evento.direccion" />
                                     <small id="helpId" class="form-text text-muted">Dirección en que se celebrará tu aniversario.</small>
                                 </div>
                             </div>
@@ -70,7 +78,12 @@
                             <div class="row">
                                 <div class="col-6 mx-auto form-group">
                                     <label for="banco" class="d-block">Entidad Financiera</label>
-                                    <angular2-multiselect [data]="listBancos" [(ngModel)]="listBancosSelected"  [settings]="listBancosSettings" ></angular2-multiselect>
+                                    <angular2-multiselect 
+                                        [data]="listBancos" 
+                                        [(ngModel)]="listBancosSelected" 
+                                        [settings]="listBancosSettings"
+                                        (onSelect)="onBancoSelect($event)">
+                                    </angular2-multiselect>
                                     <small id="helpId" class="form-text text-muted">Entidad Financiera donde se realizarán los abonos de tus invitados.</small>
                                 </div>
                             </div>
@@ -78,23 +91,7 @@
                             <div class="row">
                                 <div class="col-6 mx-auto form-group">
                                     <label for="tipo_cuenta" class="d-block">Tipo de cuenta</label>
-                                    <div class="dropdown bootstrap-select">
-                                        <select
-                                            class="selectpicker"
-                                            title="Tipo de Cuenta"
-                                            id="tipo_cuenta"
-                                            data-width="100%"
-                                            data-live-search="false"
-                                            data-size="10"
-                                            data-style="btn btn-outline-primary btn-round btn-block"
-                                            #selecttdc
-                                            [(ngModel)]="evento.tipoCuenta"
-                                        >
-                                            <option value="CC">Cuenta Corriente</option>
-                                            <option value="CV">Cuenta Vista</option>
-                                            <option value="CR">Cuenta RUT</option>
-                                        </select>
-                                    </div>
+                                    <angular2-multiselect [data]="listTipoCuenta" [(ngModel)]="listTipoCuentaSelected" [settings]="listTipoCuentaSettings"></angular2-multiselect>
                                     <small id="helpId" class="form-text text-muted">Tipo de cuenta de tu entidad financiera.</small>
                                 </div>
                             </div>
@@ -123,11 +120,13 @@
                                 </div>
                             </div>
 
+                        <!--</form>-->
+
                             <div class="space-70"></div>
 
                             <div class="form-inline">
                                 <angular2-multiselect [data]="listDeseos" [(ngModel)]="listDeseosSelected"  [settings]="listDeseosSettings" style="width:200px;" ></angular2-multiselect>
-                                <button class="btn btn-primary btn-round" type="button" (click)="onClickAddDeseo()"><i class="now-ui-icons ui-1_simple-add mr-2"></i> Agregar deseo</button>
+                                <button class="btn btn-primary btn-round mx-2" type="button" (click)="onClickAddDeseo()"><i class="now-ui-icons ui-1_simple-add mr-2"></i> Agregar deseo</button>
                             </div>
 
                             <table class="table" *ngIf="nuevosDeseos?.length > 0">
