--- a/src/app/eventos/nuevo-evento.component.html
+++ b/src/app/eventos/nuevo-evento.component.html
@@ -47,30 +47,32 @@
                             <div class="row">
                                 <div class="col-6 mx-auto form-group">
                                     <label for="nombre">Título del aniversario</label>
-                                    <input type="text" class="form-control" name="nombre" id="nombre" aria-describedby="helpId" placeholder="Título" [(ngModel)]="evento.nombre" />
+                                    <input type="text" class="form-control" id="nombre" name="nombre" aria-describedby="helpId" placeholder="Título" [(ngModel)]="evento.nombre"  />
                                     <small id="helpId" class="form-text text-muted">Con este título tus invitados conocerán tu aniversario.</small>
                                 </div>
                             </div>
-
+                            
                             <div class="row">
                                 <div class="col-6 mx-auto form-group">
                                     <label for="fecha">Fecha y hora del aniversario</label>
-                                    <input type="text" class="form-control" name="fecha" id="fecha" aria-describedby="helpId" placeholder="01/02/2019 20:00:00" [(ngModel)]="evento.fechaEvento" />
-                                    <small id="helpId" class="form-text text-muted">Esta fecha y hora indica el día de celebración de tu aniversario.</small>
                                 </div>
                             </div>
-
                             <div class="row">
-                                <div class="col-6 mx-auto form-group">
-                                    <!-- <angular2-date-picker [(ngModel)]="nuevaFecha" [settings]="settingFecha"></angular2-date-picker> -->
-                                    <ngb-datepicker #d></ngb-datepicker>
+                                <div class="d-flex col-6 mx-auto form-group justify-content-between align-items-center">
+                                    <ngb-datepicker ngDefaultControl [(ngModel)]="datepick"></ngb-datepicker>
+                                    <ngb-timepicker ngDefaultControl [(ngModel)]="timepick"></ngb-timepicker>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-6 mx-auto">
+                                    <small id="helpId" class="form-text text-muted">Fecha de la celebración de tu aniversario.</small>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-6 mx-auto form-group">
                                     <label for="lugar">Lugar del aniversario</label>
-                                    <input type="text" class="form-control" name="lugar" id="lugar" aria-describedby="helpId" placeholder="Dirección" [(ngModel)]="evento.direccion" />
+                                    <input type="text" class="form-control" name="lugar" id="lugar" aria-describedby="helpId" placeholder="Dirección" [(ngModel)]="evento.direccion"    />
                                     <small id="helpId" class="form-text text-muted">Dirección en que se celebrará tu aniversario.</small>
                                 </div>
                             </div>
@@ -82,7 +84,7 @@
                                         [data]="listBancos" 
                                         [(ngModel)]="listBancosSelected" 
                                         [settings]="listBancosSettings"
-                                        (onSelect)="onBancoSelect($event)">
+                                        (onSelect)="onBancoSelect($event)"   >
                                     </angular2-multiselect>
                                     <small id="helpId" class="form-text text-muted">Entidad Financiera donde se realizarán los abonos de tus invitados.</small>
                                 </div>
@@ -91,7 +93,7 @@
                             <div class="row">
                                 <div class="col-6 mx-auto form-group">
                                     <label for="tipo_cuenta" class="d-block">Tipo de cuenta</label>
-                                    <angular2-multiselect [data]="listTipoCuenta" [(ngModel)]="listTipoCuentaSelected" [settings]="listTipoCuentaSettings"></angular2-multiselect>
+                                    <angular2-multiselect [data]="listTipoCuenta" [(ngModel)]="listTipoCuentaSelected" [settings]="listTipoCuentaSettings"   ></angular2-multiselect>
                                     <small id="helpId" class="form-text text-muted">Tipo de cuenta de tu entidad financiera.</small>
                                 </div>
                             </div>
@@ -99,7 +101,7 @@
                             <div class="row">
                                 <div class="col-6 mx-auto form-group">
                                     <label for="num_cuenta">Número de Cuenta</label>
-                                    <input type="text" class="form-control" name="num_cuenta" id="num_cuenta" aria-describedby="helpId" placeholder="00012223904" [(ngModel)]="evento.numeroCuenta" />
+                                    <input type="text" class="form-control" name="num_cuenta" id="num_cuenta" aria-describedby="helpId" placeholder="00012223904" [(ngModel)]="evento.numeroCuenta"   />
                                     <small id="helpId" class="form-text text-muted">Número de cuenta corriente donde se realizarán los abonos.</small>
                                 </div>
                             </div>
@@ -107,7 +109,7 @@
                             <div class="row">
                                 <div class="col-6 mx-auto form-group">
                                     <label for="email_banco">Correo Electrónico</label>
-                                    <input type="text" class="form-control" name="email_banco" id="email_banco" aria-describedby="helpId" placeholder="comprobante@ejemplo.cl" [(ngModel)]="evento.emailCuenta" />
+                                    <input type="text" class="form-control" name="email_banco" id="email_banco" aria-describedby="helpId" placeholder="comprobante@ejemplo.cl" [(ngModel)]="evento.emailCuenta"   />
                                     <small id="helpId" class="form-text text-muted">En esta dirección se notificarán los abonos realizados.</small>
                                 </div>
                             </div>
@@ -115,7 +117,7 @@
                             <div class="row">
                                 <div class="col-6 mx-auto form-group">
                                     <label for="telefono">Teléfono</label>
-                                    <input type="text" class="form-control" name="telefono" id="telefono" aria-describedby="helpId" placeholder="+56 9 22 345 643" [(ngModel)]="evento.telefono" />
+                                    <input type="text" class="form-control" name="telefono" id="telefono" aria-describedby="helpId" placeholder="+56 9 22 345 643" [(ngModel)]="evento.telefono"   />
                                     <small id="helpId" class="form-text text-muted">Sólo usaremos tu número para informaciones importantes.</small>
                                 </div>
                             </div>
@@ -125,7 +127,7 @@
                             <div class="space-70"></div>
 
                             <div class="form-inline">
-                                <angular2-multiselect [data]="listDeseos" [(ngModel)]="listDeseosSelected"  [settings]="listDeseosSettings" style="width:200px;" ></angular2-multiselect>
+                                <angular2-multiselect [data]="listDeseos" [(ngModel)]="listDeseosSelected"  [settings]="listDeseosSettings" style="width:200px;"   ></angular2-multiselect>
                                 <button class="btn btn-primary btn-round mx-2" type="button" (click)="onClickAddDeseo()"><i class="now-ui-icons ui-1_simple-add mr-2"></i> Agregar deseo</button>
                             </div>
 
