--- a/src/app/eventos/invitado/evento-invitado.component.html
+++ b/src/app/eventos/invitado/evento-invitado.component.html
@@ -18,7 +18,7 @@
 
           <div class="row">
             <div class="col-8 mx-auto">
-              <h2 class="card-title">¡Felicitaciones! <small>Encontramos el evento al que te invitaron.</small></h2>
+              <h2 class="card-title">¡Felicitaciones! <br><small>Encontramos el evento al que te invitaron.</small></h2>
               <div class="card card-plain card-blog">
                 <div class="row">
                   <div class="col-md-6">
@@ -28,7 +28,8 @@
                   </div>
                   <div class="col-md-6">
                     <h3 class="card-title">{{ evento.nombre }}</h3>
-                    <p class="card-description">A realizarse el día {{ evento.fechaEvento | date:'dd MMMM yyyy' }} a las {{ evento.horaEvento }},
+                    <p class="card-description">A realizarse el día {{ evento.fechaEvento | date:'dd MMMM yyyy' }} a las 
+                      {{ evento.horaEvento | date:'HH:mm'}},
                         en {{ evento.direccion }}. ¿Es correcta la información?
                         Ahora es tu turno de regalar tus mejores deseos. 
                     </p>
@@ -51,6 +52,12 @@
                 (onSelect)="onDeseoSelect($event)">
               </angular2-multiselect>
               <small id="helpId" class="form-text text-muted">Estos son los deseos que puedes regalar <i class="fas fa-heart text-danger"></i></small>
+            </div>
+          </div>
+
+          <div class="row" *ngIf="listDeseosSelected.length > 0">
+            <div class="col-8 mx-auto form-group">
+              <span>Este deseo tiene un valor de $ 3.000.- por unidad.</span>
             </div>
           </div>
 
